# clippee

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/distributor/: package.json  requirements.txt
apps/facecam-detector/: database.py  main.py  models.py  package.json  pyproject.toml  requirements.txt  rmq.py
apps/renderer/: package.json  tsconfig.json
apps/renderer/src/: Composition.tsx  Root.tsx  consumer.ts  types.ts
