[project]
name = "facecam-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "aiomysql>=0.3.2",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "opencv-python-headless>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.4.5",
    "uuid6>=2025.0.1",
    "uvicorn>=0.40.0",
]
